--- a/.github/workflows/easyssr.yml
+++ b/.github/workflows/easyssr.yml
@@ -201,6 +201,7 @@ jobs:
           # 常用LuCI插件选择:
           # CONFIG_PACKAGE_luci-app-cpufreq is not set
           CONFIG_PACKAGE_luci-app-firewall=y
+          CONFIG_PACKAGE_luci-app-homeproxy=y
           CONFIG_PACKAGE_luci-app-package-manager=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_Iptables_Transparent_Proxy is not set
