--- a/.github/workflows/easyssr.yml
+++ b/.github/workflows/easyssr.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-25.12 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
+          git clone https://github.com/openwrt/openwrt
           mv ./openwrt/* ./
 
       - name: 修改部分patch文件
@@ -105,7 +105,6 @@ jobs:
           rm -rf shadowsocks-rust
           rm -rf shadowsocksr-libev
           rm -rf simple-obfs
-          rm -rf sing-box
           rm -rf smartdns
           rm -rf ssocks
           rm -rf tcping
@@ -234,6 +233,7 @@ jobs:
 
           # 常用软件包:
           CONFIG_PACKAGE_smartdns=y
+          CONFIG_PACKAGE_sing-box=y
           CONFIG_PACKAGE_smartdns-ui=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
