--- a/.github/workflows/easyssr.yml
+++ b/.github/workflows/easyssr.yml
@@ -67,8 +67,14 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone https://github.com/openwrt/openwrt openwrt
+          git clone -b openwrt-25.12 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
+
+      - name: 修改部分patch文件
+        run: |
+          sed -i '16,18d' package/emortal/default-settings/files/99-default-settings
+          sed -i '6s/1/0/g' package/network/config/firewall/files/firewall.config
+          sed -i '7s/1/0/g' package/network/config/firewall/files/firewall.config
 
       - name: 更新feeds源
         run: |
