--- a/.github/workflows/easyssr.yml
+++ b/.github/workflows/easyssr.yml
@@ -67,14 +67,8 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-25.12 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
+          git clone https://github.com/openwrt/openwrt openwrt
           mv ./openwrt/* ./
-
-      - name: 修改部分patch文件
-        run: |
-          sed -i '16,18d' package/emortal/default-settings/files/99-default-settings
-          sed -i '6s/1/0/g' package/network/config/firewall/files/firewall.config
-          sed -i '7s/1/0/g' package/network/config/firewall/files/firewall.config
 
       - name: 更新feeds源
         run: |
@@ -209,7 +203,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
-          CONFIG_PACKAGE_smartdns=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
           CONFIG_PACKAGE_unzip=y
