--- a/.github/workflows/easyssr.yml
+++ b/.github/workflows/easyssr.yml
@@ -67,8 +67,15 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-24.10 --single-branch https://github.com/openwrt/openwrt openwrt
+          git clone -b openwrt-25.12 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
+
+      - name: 修改部分patch文件
+        run: |
+          sed -i '16,18d' package/emortal/default-settings/files/99-default-settings
+          sed -i '29s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
+          sed -i '30s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
+          sed -i '31s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
 
       - name: 更新feeds源
         run: |
