--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -180,6 +180,7 @@ jobs:
           CONFIG_PACKAGE_odhcpd-ipv6only=y
 
           # 文件系统支持:
+          # CONFIG_USE_APK is not set
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
@@ -230,7 +231,6 @@ jobs:
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
           CONFIG_PACKAGE_smartdns=y
-          CONFIG_PACKAGE_smartdns-ui=y
           CONFIG_PACKAGE_unzip=y
           CONFIG_PACKAGE_bind-dig=y
           CONFIG_PACKAGE_ca-certificates=y
