--- a/.github/workflows/immpw.yml
+++ b/.github/workflows/immpw.yml
@@ -74,6 +74,7 @@ jobs:
         run: |
           sed -i '6s/1/0/g' package/network/config/firewall/files/firewall.config
           sed -i '7s/1/0/g' package/network/config/firewall/files/firewall.config
+          sed -i '16,18d' package/emortal/default-settings/files/99-default-settings
           sed -i '29s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
           sed -i '30s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
           sed -i '31s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
@@ -86,6 +87,15 @@ jobs:
         run: |
           sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
           sed -i 's/nas/services/g' feeds/luci/applications/luci-app-samba4/root/usr/share/luci/menu.d/luci-app-samba4.json
+
+      - name: 替换部分默认luci组件
+        run: |
+          sed -i 's/+luci-app-attendedsysupgrade/+luci-app-ttyd/g' feeds/luci/collections/luci/Makefile
+
+      - name: 删除部分luci文件
+        run: |
+          pushd feeds/luci/applications
+          rm -rf luci-app-passwall
 
       - name: 删除部分packages文件
         run: |
@@ -145,7 +155,6 @@ jobs:
           rm -rf qBittorrent
           rm -rf dnsproxy
 
-
       - name: 载入自定义配置
         run: |
           sed -i '6s/1/0/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
@@ -173,15 +182,12 @@ jobs:
           # DNSMASQ-FULL支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
-          CONFIG_PACKAGE_dnsmasq_full_ipset=y
-          # CONFIG_PACKAGE_dnsmasq_full_nftset is not set
-          CONFIG_PACKAGE_firewall=y
-          # CONFIG_PACKAGE_firewall4 is not set
           # CONFIG_PACKAGE_ipv6helper is not set
           CONFIG_PACKAGE_odhcp6c=y
           CONFIG_PACKAGE_odhcpd-ipv6only=y
 
           # 文件系统支持:
+          # CONFIG_USE_APK is not set
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
@@ -259,7 +265,7 @@ jobs:
           mkdir -p ./artifact/package
           mkdir -p ./artifact/buildinfo
           rm -rf $(find ./bin/targets/ -type d -name "packages")
-          cp -rf $(find ./bin/packages/ -type f -name "*.apk") ./artifact/package/
+          cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
           cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
       - name: Upload buildinfo
         uses: actions/upload-artifact@v4
