--- a/.github/workflows/immpw.yml
+++ b/.github/workflows/immpw.yml
@@ -144,7 +144,7 @@ jobs:
           cd package
           mkdir openwrt-packages
           cd openwrt-packages
-          git clone -b Dev --single-branch https://github.com/Openwrt-Passwall/openwrt-passwall luci-app-passwall
+          git clone -b main --single-branch https://github.com/Openwrt-Passwall/openwrt-passwall luci-app-passwall
           git clone https://github.com/Openwrt-Passwall/openwrt-passwall-packages
           pushd luci-app-passwall/luci-app-passwall/root/etc
           rm -rf hotplug.d
